2008-03-06  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/update-notifier.c (create_new_updates_menu) : NULL check.
	(update_state) : g_return_if_fail (upno != NULL).
	(setup_dbus) : use osso_rpc_set_cb_f, because the data field doesn't
	need to be freed by libosso.
	(check_for_notifications_thread) : 
	g_return_val_if_fail (userdata != NULL, NULL).
	(check_for_notifications) : g_return_if_fail (upno != NULL).

	* src/xexp.c (xexp_read_1) : NULL check.
	(xexp_read) : NULL check.
	(xexp_read_file) : NULL check.
	(xexp_fprintf_escaped) : NULL check.
	(write_blanks) : NULL check.
	(xexp_write_1) : NULL check.
	(xexp_write) : NULL check (NB81838).

2008-03-06  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/update-notifier.c (cleanup_menu) : set the toggle button
	inactive whenever the menu is destroyed,
	(update_state) : if a menu shouldn't be shown, call cleanup_menu
	just in case (NB81724).

2008-03-06  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/details.cc (spd_set_page_widget): Don't use g_return_if_fail
	as if it were an "if (...) return" statement.

	* src/main.h (get_package_info): Changed the name of a param, to
	be more coherent with its new meaning: only_basic_info.

	* src/main.cc (get_package_info): Don't call to the apt-worker when
	the info was already retrieved or when only_basic_info is TRUE.
	(struct gpis_closure): Changed the name of only_installable_info
	to only_basic_info, to keep everything coherent.
	(get_package_infos): Likewise.

	* src/operations.cc (up_confirm): Removed, and copied its code
	into uninstall_package, as asking for the info is not needed.
	(uninstall_package): Already explained.

2008-03-05  Mario Sanchez Prada  <msanchez@maemo.org>

	Finished changes to finally fix the 'flickering' effect with the
	package details dialog.

	* src/details.cc (add_table_field): Removed this function to
	refactor its logic into the add_table_field_and_value function.